Fixed FAB button themes and idea discussion

--- a/client/app/modules/admin/challenge/templates/challengeSettings.tpl.html
+++ b/client/app/modules/admin/challenge/templates/challengeSettings.tpl.html
@@ -1,4 +1,4 @@
-<md-toolbar scroll-shrink class="md-theme-indigo">
+<md-toolbar scroll-shrink class="md-accent">
     <div class="center">
         {{ challenge.title }} Settings
     </div>
@@ -16,7 +16,7 @@
         </div>
         <textarea placeholder="A brief description of your project" rows="5" ng-model="challenge.brief" class="pretty-area"></textarea>
         <tag-manager entity="challenge" ng-model="challenge.tags"></tag-manager>
-        <md-button class="md-theme-indigo"  ng-click="updateChallenge()" style="margin:auto;" ng-disabled="projectBasic.title.$invalid">
+        <md-button class="md-accent"  ng-click="updateChallenge()" style="margin:auto;" ng-disabled="projectBasic.title.$invalid">
             <span class="faa-spin animated" ng-if="isBasicLoading">
                 <i class="fa fa-spin"></i>
             </span>
