--- a/client/app/modules/admin/challenge/templates/modal/challenge-crop-banner-modal.tpl.html
+++ b/client/app/modules/admin/challenge/templates/modal/challenge-crop-banner-modal.tpl.html
@@ -2,7 +2,7 @@
     <md-toolbar layout="row" layout-align="">
         <div layout layout-align="start center">
             <div flex>Pick a banner</div>
-            <md-button class="md-button-fab" ng-click="cancel()">
+            <md-button class="md-fab" ng-click="cancel()">
                 <i class="fa fa-times" ></i>
             </md-button>
         </div>
