--- a/client/app/modules/admin/challenge/templates/modal/challenge-edit-modal.tpl.html
+++ b/client/app/modules/admin/challenge/templates/modal/challenge-edit-modal.tpl.html
@@ -5,10 +5,10 @@
             <span class="faa-spin animated" ng-if="isLoading">
                 <i class="fa fa-spinner"></i>
             </span>
-            <md-button class="md-button-fab" ng-click="update(newChallenge)">
+            <md-button class="md-fab" ng-click="update(newChallenge)">
                 <i class="fa fa-save"></i>
             </md-button>
-            <md-button class="md-button-fab" ng-click="cancel()">
+            <md-button class="md-fab" ng-click="cancel()">
                 <i class="fa fa-times"></i>
             </md-button>
         </div>
