--- a/client/app/modules/admin/challenge/templates/modal/challenge-remove-modal.tpl.html
+++ b/client/app/modules/admin/challenge/templates/modal/challenge-remove-modal.tpl.html
@@ -5,10 +5,10 @@
                 <div  flex class="center">
                     <i class="fa fa-warning">Warning</i>
                 </div>
-                <md-button class="md-button-fab md-warn" ng-click="delete()" ng-disabled="removeChallengeForm.$invalid">
+                <md-button class="md-fab md-warn" ng-click="delete()" ng-disabled="removeChallengeForm.$invalid">
                     <i class="fa fa-ban"></i>
                 </md-button>
-                <md-button class="md-button-fab" ng-click="cancel()">
+                <md-button class="md-fab" ng-click="cancel()">
                     <i class="fa fa-times"></i>
                 </md-button>
             </div>
