--- a/client/app/modules/admin/profile/templates/modal/editPageModal.tpl.html
+++ b/client/app/modules/admin/profile/templates/modal/editPageModal.tpl.html
@@ -4,10 +4,10 @@
     <md-toolbar layout="row" layout-align="">
         <div layout layout-align="start center">
             <span flex>Profile edition</span>
-            <md-button class="md-button-fab" ng-click="updateProfile()">
+            <md-button class="md-fab" ng-click="updateProfile()">
                 <i class="fa fa-check" style="color:green;"></i>
             </md-button>
-            <md-button class="md-button-fab" ng-click="cancel()">
+            <md-button class="md-fab" ng-click="cancel()">
                 <i class="fa fa-times" ></i>
             </md-button>
         </div>
