--- a/client/app/modules/admin/profile/templates/modal/resetPassword.tpl.html
+++ b/client/app/modules/admin/profile/templates/modal/resetPassword.tpl.html
@@ -2,10 +2,10 @@
     <md-toolbar>
         <div layout layout-align="start center">
             <span flex>Reset Your password</span>
-            <md-button class="md-button-fab" ng-click="updatePass()" style="color:green;">
+            <md-button class="md-fab" ng-click="updatePass()" style="color:green;">
                 <i class="fa fa-check"></i>
             </md-button>
-            <md-button class="md-button-fab" ng-click="cancel()">
+            <md-button class="md-fab" ng-click="cancel()">
                 <i class="fa fa-times" ></i>
             </md-button>
         </div>
