--- a/client/app/modules/admin/project/templates/modal/homePageModal.tpl.html
+++ b/client/app/modules/admin/project/templates/modal/homePageModal.tpl.html
@@ -2,10 +2,10 @@
     <md-toolbar>
         <div class="md-toolbar-tools">
             <span flex>Edit your project home page</span>
-            <md-button ng-click="update(newProject)" class="md-button-fab">
+            <md-button ng-click="update(newProject)" class="md-fab">
                 <i class="fa fa-save"></i>
             </md-button>
-            <md-button class="md-button-fab" ng-click="cancel()">
+            <md-button class="md-fab" ng-click="cancel()">
                 <i class="fa fa-times"></i>
             </md-button>
         </div>
