--- a/client/app/modules/admin/project/templates/modal/inviteModal.tpl.html
+++ b/client/app/modules/admin/project/templates/modal/inviteModal.tpl.html
@@ -3,7 +3,7 @@
         <div flex>
             Invite some people
         </div>
-        <md-button class="md-button-fab" ng-click="sendInvite()">
+        <md-button class="md-fab" ng-click="sendInvite()">
             <i class="fa fa-check"></i>
         </md-button>
         <md-button ng-click="cancel()">
