--- a/client/app/modules/header/templates/menu.tpl.html
+++ b/client/app/modules/header/templates/menu.tpl.html
@@ -19,7 +19,7 @@
             Messages
         </md-button>
         -->
-        <md-button ui-sref="challenges.list({ tag : 'all' })" ng-class="{'md-theme-indigo':$uiRoute}" ui-route="/challenges/[a-z]*">
+        <md-button ui-sref="challenges.list({ tag : 'all' })" ng-class="{'md-accent':$uiRoute}" ui-route="/challenges/[a-z]*">
             Challenges
         </md-button>
         <md-button ui-sref="projects.list({ tag : 'all' })" ng-class="{'md-theme-light':$uiRoute}" ui-route="/projects/all">
