--- a/client/app/modules/project/templates/modal/applyTeamModal.tpl.html
+++ b/client/app/modules/project/templates/modal/applyTeamModal.tpl.html
@@ -2,10 +2,10 @@
     <md-toolbar>
         <div layout="row">
             <h2 style="text-align: center;" flex>Introduce Yourself</h2>
-            <md-button class="md-button-fab" ng-click="applyTeamMsg()">
+            <md-button class="md-fab" ng-click="applyTeamMsg()">
                 <i class="fa fa-check"></i>
             </md-button>
-            <md-button class="md-button-fab"  ng-click="cancel()">
+            <md-button class="md-fab"  ng-click="cancel()">
                 <i class="fa fa-times"></i>
             </md-button>
         </div>
