--- a/client/app/modules/project/templates/modal/shareModal.tpl.html
+++ b/client/app/modules/project/templates/modal/shareModal.tpl.html
@@ -1,7 +1,7 @@
 <md-dialog>
     <md-toolbar layout="row">
         <div flex></div>
-        <md-button ng-click="cancel()" class="md-button-fab">
+        <md-button ng-click="cancel()" class="md-fab">
             <i class="fa fa-times"></i>
         </md-button>
     </md-toolbar>
