--- a/client/app/modules/workspace/templates/modal/addNoteModal.tpl.html
+++ b/client/app/modules/workspace/templates/modal/addNoteModal.tpl.html
@@ -9,10 +9,10 @@
             <div flex class="center">
                 Note
             </div>
-            <md-button class="md-button-fab"  ng-click="createNote(note)" >
+            <md-button class="md-fab"  ng-click="createNote(note)" >
                 <i class="fa fa-check "></i>
             </md-button>
-            <md-button ng-click="cancel()" block class="md-button-fab">
+            <md-button ng-click="cancel()" block class="md-fab">
                 <i class="fa fa-times" ></i>
             </md-button>
             <!--<md-button  style="font-size: 1.6em">-->
