--- a/client/app/modules/workspace/templates/modal/addResourceModal.tpl.html
+++ b/client/app/modules/workspace/templates/modal/addResourceModal.tpl.html
@@ -2,10 +2,10 @@
     <md-toolbar>
         <div layout="row">
             <div flex></div>
-            <md-button class="md-button-fab" ng-click="addUrl(url)">
+            <md-button class="md-fab" ng-click="addUrl(url)">
                 <i class="fa fa-save"></i>
             </md-button>
-            <md-button class="md-button-fab" ng-click="cancel()">
+            <md-button class="md-fab" ng-click="cancel()">
                 <i class="fa fa-times" ></i>
             </md-button>
 
