--- a/client/app/modules/workspace/templates/modal/fileDetailModal.tpl.html
+++ b/client/app/modules/workspace/templates/modal/fileDetailModal.tpl.html
@@ -2,13 +2,13 @@
     <md-toolbar>
         <div layout="row">
             <div flex></div>
-            <md-button class="md-button-fab" ng-href="{{ fileDetails.url }}" target="_blank">
+            <md-button class="md-fab" ng-href="{{ fileDetails.url }}" target="_blank">
                 <i class="fa fa-download"></i>
             </md-button>
             <md-button ng-click="removeFile()" target="_blank">
                 Delete
             </md-button>
-            <md-button class="md-button-fab" ng-click="cancel()">
+            <md-button class="md-fab" ng-click="cancel()">
                 <i class="fa fa-times"></i>
             </md-button>
         </div>
