--- a/client/app/modules/admin/challenge/templates/modal/challenge-crop-poster-modal.tpl.html
+++ b/client/app/modules/admin/challenge/templates/modal/challenge-crop-poster-modal.tpl.html
@@ -2,7 +2,7 @@
     <md-toolbar layout="row">
         <div layout layout-align="start center">
             <div flex>Pick a poster image</div>
-            <md-button class="md-button-fab"  ng-click="cancel()">
+            <md-button class="md-fab"  ng-click="cancel()">
                 <i class="fa fa-times"></i>
             </md-button>
         </div>
