--- a/client/app/modules/admin/profile/templates/modal/cropPosterModal.tpl.html
+++ b/client/app/modules/admin/profile/templates/modal/cropPosterModal.tpl.html
@@ -2,7 +2,7 @@
     <md-toolbar layout="row" layout-align="">
         <div layout layout-align="start center">
             <span flex>Your profile page</span>
-            <md-button class="md-button-fab" ng-click="cancel()">
+            <md-button class="md-fab" ng-click="cancel()">
                 <i class="fa fa-times" ></i>
             </md-button>
         </div>
