--- a/client/app/modules/workspace/templates/modal/fileUploadModal.tpl.html
+++ b/client/app/modules/workspace/templates/modal/fileUploadModal.tpl.html
@@ -6,14 +6,14 @@
                 <i class="fa fa-spinner fa-2x"></i>
             </div>
             <div  ng-if="file">
-                <md-button class="md-button-fab" ng-click="upload(file,file.description)">
+                <md-button class="md-fab" ng-click="upload(file,file.description)">
                     <i class="fa fa-cloud-upload"></i>
                 </md-button>
-                <md-button class="md-button-fab" ng-click="cancelUpload()">
+                <md-button class="md-fab" ng-click="cancelUpload()">
                     <i  class="fa fa-2x fa-ban"></i>
                 </md-button>
             </div>
-            <md-button class="md-button-fab" ng-click="cancel()">
+            <md-button class="md-fab" ng-click="cancel()">
                 <i class="fa fa-times"></i>
             </md-button>
         </div>
