--- a/client/app/modules/home/templates/home.tpl.html
+++ b/client/app/modules/home/templates/home.tpl.html
@@ -45,7 +45,7 @@
         <h1 class="center" >Popular Projects</h1>
         <md-grid-list md-cols="3" md-row-height="400px">
             <md-grid-tile ng-repeat="project in projects">
-                <project-card-contents my-project="project" style="height: 400px;"></project-card-contents> 
+                <project-card my-project="project" style="height: 400px;"></project-card> 
             </md-grid-tile>            
         </md-grid-list>
 
