Fixed challenge settings

--- a/client/app/modules/admin/challenge/templates/modal/challenge-crop-poster-modal.tpl.html
+++ b/client/app/modules/admin/challenge/templates/modal/challenge-crop-poster-modal.tpl.html
@@ -1,7 +1,7 @@
 <md-dialog id="edit-poster-dialog">
     <md-toolbar layout="row">
         <div layout layout-align="start center">
-            <div flex>Pick a poster image</div>
+            <div>Pick a poster image</div>
             <md-button class="md-fab"  ng-click="cancel()">
                 <i class="fa fa-times"></i>
             </md-button>
