--- a/client/app/modules/admin/profile/templates/edit.tpl.html
+++ b/client/app/modules/admin/profile/templates/edit.tpl.html
@@ -3,7 +3,7 @@
         <md-content style="padding-left: 20px;" layout="column" layout-fill>
             <md-toolbar layout="row">
                 <div class="md-toolbar-tools">
-                    <i class="fa fa-caret-left fa-2x my-btn" hide-md style="color:black;" ng-click="toggle()" flex></i>
+                    <i class="fa fa-caret-left fa-2x my-btn" style="color:black;" ng-click="toggle()" flex></i>
                     <div>
                         <i class="fa fa-trophy">Edit your profile</i>
                     </div>
