--- a/client/app/modules/idea/templates/idea-create.tpl.html
+++ b/client/app/modules/idea/templates/idea-create.tpl.html
@@ -5,9 +5,13 @@
             <label for="title">Title</label>
             <input id="title" type="text" ng-model="idea.title" />
         </md-input-container>
+
         <tag-manager entity="idea"></tag-manager>
 
-        <textarea placeholder="What's your idea?" ng-model="idea.brief" rows="5"></textarea>
+        <md-input-container>
+            <label>What's your idea?</label>
+            <textarea placeholder="What's your idea?" ng-model="idea.brief" rows="5"></textarea>
+        </md-input-container>
 
         <div>
             <md-button style="width:100%;" ng-click="onDone()" class="md-raised">Submit Idea</md-button>
