--- a/client/app/modules/idea/templates/ideas.tpl.html
+++ b/client/app/modules/idea/templates/ideas.tpl.html
@@ -16,7 +16,7 @@
                         <h1 class="md-headline">{{ idea.title }}</h1>
                     </a>
                     <showtags entity="idea"></showtags>
-                    <div hide block-md>
+                    <div>
                         <p ng-bind-html="idea.brief"></p>
                         <div layout="row">
                             <div flex>
