--- a/client/app/modules/project/templates/project-home.tpl.html
+++ b/client/app/modules/project/templates/project-home.tpl.html
@@ -19,6 +19,6 @@
     <h3>Related Ideas</h3>
 
     <section>
-        <idea-card inline-block idea-id="idea" ng-repeat="idea in project.ideas"></idea-card>
+        <idea-card idea-id="idea" ng-repeat="idea in project.ideas"></idea-card>
     </section>
 </section>
