--- a/client/app/modules/project/templates/project.tpl.html
+++ b/client/app/modules/project/templates/project.tpl.html
@@ -5,7 +5,7 @@
         </h1>        
     </div>
 
-    <md-button class="md-fab md-raised" ng-click="follow()" style="bottom:-24px;position:absolute; right:20px;z-index : inherit" ng-class="{ 'md-primary' : isFollow }" ng-if="currentUser && !isOwner">
+    <md-button class="md-fab md-raised" ng-click="follow()" style="bottom:-24px;position:absolute; right:20px;z-index : inherit" ng-class="{ 'md-accent' : isFollow }" ng-if="currentUser && !isOwner">
         <i class="fa fa-thumbs-up"></i>
     </md-button>
 </md-toolbar>
