--- a/client/app/modules/admin/project/templates/team.tpl.html
+++ b/client/app/modules/admin/project/templates/team.tpl.html
@@ -8,7 +8,7 @@
         </div>
         <div layout="row">
             <div ng-repeat="member in project.members" layout="column" style="width:250px;">
-                <user-card inline-block user-id="member._id"></user-card>
+                <user-card user-id="member._id"></user-card>
                 <md-button ng-click="ban(member._id)"><i class="fa fa-2x fa-ban"></i> Ban</md-button>
             </div>
         </div>
